# daily-trade-etfs

./: .env.example  README.md  main.py  pyproject.toml
config/: config.py
portfolio/: GOLDETF.csv  HDFCSML250.csv  HNGSNGBEES.csv  MAFANG.csv  MON100.csv  NIFTYBEES.csv  SILVERBEES.csv  summary.csv
public/: extract.py
scripts/: daily_trade.py  get_portfolio_summary.py
utils/: allowed_to_trade.py  get_data.py  instrument_keys.py  market_open.py  process_trades.py
